style fixes, mobile fixes; added video events

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="top__content">
                 <h1 class="top__title">Поздравляем!</h1>
                 <div class="top__subtitle">Денис и Валя, от всей команды поздравляем Вас с началом новой главы в вашей истории!</div>
-                <div class="top__subtitle">Желаем, чтобы Ваш сын <span id="dynamic-text"></span><div class='console-underscore' id='console'>&#95;</div></div>
+                <div class="top__subtitle top__subtitle_left">Желаем, чтобы Ваш сын <span id="dynamic-text"></span><div class='console-underscore' id='console'>&#95;</div></div>
                 <button id="target-button" class="top__button" data-target="#congrats">Перейти к поздравлениям</button>
             </div>
             <div class="parallax-wrap">
